# nejiki_calculator

./: .gitignore  CLAUDE.md  README.md  biome.json  components.json  next-sitemap.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
.claude/plans/: ssg-migration.md
.cmux/: setup
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: auto-triage-feedback.yml  keep-db-alive.yml
ai-agent/: README.md  commit  custom-agent.sh  pr  run-agent.sh
ai-agent/lib/: ai.sh  common.sh
docs/: battle-factory-logic.md  er-diagram.md  strategy-guide.md  ubiquitous-language.md
prisma/: schema.prisma  seed.js
prisma/seed/: index.js
public/: manifest.json  robots.txt  sitemap-0.xml  sitemap.xml  sw.js
public/data/: factory-pokemons.json
scripts/: generate-pwa-icons.js
src/components/: app-sidebar.tsx  attacker-reserve.tsx  attackers.tsx  auto-complete.tsx  damage.tsx  defender-card.tsx  defender-reserve.tsx  env-card.tsx  loading.tsx  move-card.tsx  pokemon-card.tsx  pokemon-description.tsx  rank.tsx  type-badge.tsx
src/constants/: abilities.ts  cardTypeStyles.ts  factoryPokemon.ts  index.ts  items.ts  ivs.ts  moves.ts  pokemon.ts  types.ts
src/functions/: calculate_actual.ts  calculate_atActual.ts  calculate_ma.ts  (+10 more)
tools/: README.md
tools/ga4/: pyproject.toml
tools/ga4/src/ga4/: __init__.py  main.py
tools/ga4/tests/: test_main.py
tools/search-console/: pyproject.toml
tools/search-console/src/search_console/: __init__.py  main.py
tools/search-console/tests/: test_main.py
(+77 files in other folders)
