[project]
name = "ga4"
version = "0.1.0"
description = "Read-only GA4 Data API CLI for nejiki-calculator"
requires-python = ">=3.13"
dependencies = [
    "google-analytics-data>=0.18.0",
]

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pytest>=8.3.0",
    "ruff>=0.9.0",
]

[project.scripts]
ga4-report = "ga4.main:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
files = ["src"]
python_version = "3.13"
ignore_missing_imports = true
